package A08_ARA0075_PPS_NA.aula08.Proxy;

public interface CotacaoService {
    double getCotacaoDolar();
}
